--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -20,12 +20,12 @@ only_commits:
 environment:
   matrix:
     - build: VisualStudio (x32)
-      command: 
+      command: cmd
       generate: VisualStudio-x32
       name: VisualStudio
       ext: bat
     - build: VisualStudio (x64)
-      command: 
+      command: cmd
       generate: VisualStudio-x64
       name: VisualStudio
       ext: bat
