--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -61,10 +61,10 @@ init:
 
 # Scripts that run after cloning repository
 install:
-  - if "%build%"=="VisualStudio (x32)" choco install doxygen.portable
-  - if "%build%"=="VisualStudio (x32)" choco install graphviz.portable
-  - if "%build%"=="VisualStudio (x64)" choco install doxygen.portable
-  - if "%build%"=="VisualStudio (x64)" choco install graphviz.portable
+#  - if "%build%"=="VisualStudio (x32)" choco install doxygen.portable
+#  - if "%build%"=="VisualStudio (x32)" choco install graphviz.portable
+#  - if "%build%"=="VisualStudio (x64)" choco install doxygen.portable
+#  - if "%build%"=="VisualStudio (x64)" choco install graphviz.portable
   - if "%build%"=="Cygwin (x32)" ps: 'Start-FileDownload "http://cygwin.com/%cyg_setup%" -FileName "%cyg_setup%"'
   - if "%build%"=="Cygwin (x64)" ps: 'Start-FileDownload "http://cygwin.com/%cyg_setup%" -FileName "%cyg_setup%"'
   - if "%build%"=="Cygwin (x32)" '%cyg_setup% --quiet-mode --no-shortcuts --only-site --root "%cyg_root%" --site "%cyg_mirror%" --local-package-dir "%cyg_cache%" --packages autoconf,automake,bison,cmake,gcc-core,gcc-g++,mingw-runtime,mingw-binutils,mingw-gcc-core,mingw-gcc-g++,mingw-pthreads,mingw-w32api,libtool,make,python,gettext-devel,gettext,intltool,libiconv,pkg-config,git,curl,libxslt > NUL 2>&1'
