--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,16 +16,16 @@ only_commits:
 # Build matrix
 environment:
   matrix:
-    - build: VisualStudio (x32)
-      command: cmd
-      generate: VisualStudio-x32
-      name: VisualStudio
-      ext: bat
-    - build: VisualStudio (x64)
-      command: cmd
-      generate: VisualStudio-x64
-      name: VisualStudio
-      ext: bat
+#    - build: VisualStudio (x32)
+#      command: cmd
+#      generate: VisualStudio-x32
+#      name: VisualStudio
+#      ext: bat
+#    - build: VisualStudio (x64)
+#      command: cmd
+#      generate: VisualStudio-x64
+#      name: VisualStudio
+#      ext: bat
     - build: Cygwin (x32)
       command: C:\cygwin\bin\bash
       generate: Cygwin
@@ -61,14 +61,14 @@ init:
 
 # Scripts that run after cloning repository
 install:
-#  - if "%build%"=="VisualStudio (x32)" choco install doxygen.portable
-#  - if "%build%"=="VisualStudio (x32)" choco install graphviz.portable
-#  - if "%build%"=="VisualStudio (x64)" choco install doxygen.portable
-#  - if "%build%"=="VisualStudio (x64)" choco install graphviz.portable
+  - if "%build%"=="VisualStudio (x32)" choco install doxygen.portable
+  - if "%build%"=="VisualStudio (x32)" choco install graphviz.portable
+  - if "%build%"=="VisualStudio (x64)" choco install doxygen.portable
+  - if "%build%"=="VisualStudio (x64)" choco install graphviz.portable
   - if "%build%"=="Cygwin (x32)" ps: 'Start-FileDownload "http://cygwin.com/%cyg_setup%" -FileName "%cyg_setup%"'
   - if "%build%"=="Cygwin (x64)" ps: 'Start-FileDownload "http://cygwin.com/%cyg_setup%" -FileName "%cyg_setup%"'
-  - if "%build%"=="Cygwin (x32)" '%cyg_setup% --quiet-mode --no-shortcuts --only-site --root "%cyg_root%" --site "%cyg_mirror%" --local-package-dir "%cyg_cache%" --packages autoconf,automake,bison,cmake,gcc-core,gcc-g++,mingw-runtime,mingw-binutils,mingw-gcc-core,mingw-gcc-g++,mingw-pthreads,mingw-w32api,libtool,make,python,gettext-devel,gettext,intltool,libiconv,pkg-config,git,curl,libxslt > NUL 2>&1'
-  - if "%build%"=="Cygwin (x64)" '%cyg_setup% --quiet-mode --no-shortcuts --only-site --root "%cyg_root%" --site "%cyg_mirror%" --local-package-dir "%cyg_cache%" --packages autoconf,automake,bison,cmake,gcc-core,gcc-g++,mingw-runtime,mingw-binutils,mingw-gcc-core,mingw-gcc-g++,mingw-pthreads,mingw-w32api,libtool,make,python,gettext-devel,gettext,intltool,libiconv,pkg-config,git,curl,libxslt > NUL 2>&1'
+  - if "%build%"=="Cygwin (x32)" '%cyg_setup% --quiet-mode --no-shortcuts --only-site --root "%cyg_root%" --site "%cyg_mirror%" --local-package-dir "%cyg_cache%" --packages autoconf,automake,bison,cmake,doxygen,graphviz,gcc-core,gcc-g++,mingw-runtime,mingw-binutils,mingw-gcc-core,mingw-gcc-g++,mingw-pthreads,mingw-w32api,libtool,make,python,gettext-devel,gettext,intltool,libiconv,pkg-config,git,curl,libxslt > NUL 2>&1'
+  - if "%build%"=="Cygwin (x64)" '%cyg_setup% --quiet-mode --no-shortcuts --only-site --root "%cyg_root%" --site "%cyg_mirror%" --local-package-dir "%cyg_cache%" --packages autoconf,automake,bison,cmake,doxygen,graphviz,gcc-core,gcc-g++,mingw-runtime,mingw-binutils,mingw-gcc-core,mingw-gcc-g++,mingw-pthreads,mingw-w32api,libtool,make,python,gettext-devel,gettext,intltool,libiconv,pkg-config,git,curl,libxslt > NUL 2>&1'
   - if "%build%"=="Cygwin (x32)" '%command% -lc "cygcheck -dc cygwin"'
   - if "%build%"=="Cygwin (x64)" '%command% -lc "cygcheck -dc cygwin"'
   - git config --global user.name "AppVeyor"
