--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -67,10 +67,10 @@ install:
   - if "%build%"=="VisualStudio (x64)" choco install graphviz.portable
   - ps: if ($env:build -eq "Cygwin (x32)") { 'Start-FileDownload "http://cygwin.com/%cyg_setup%" -FileName "%cyg_setup%"' }
   - ps: if ($env:build -eq "Cygwin (x64)") { 'Start-FileDownload "http://cygwin.com/%cyg_setup%" -FileName "%cyg_setup%"' }
-  - if "%build%"=="Cygwin (x32)" %cyg_setup% --quiet-mode --no-shortcuts --only-site --root "%cyg_root%" --site "%cyg_mirror%" --local-package-dir "%cyg_cache%" --packages autoconf,automake,bison,cmake,doxygen,graphviz,gcc-core,gcc-g++,mingw-runtime,mingw-binutils,mingw-gcc-core,mingw-gcc-g++,mingw-pthreads,mingw-w32api,libtool,make,python,gettext-devel,gettext,intltool,libiconv,pkg-config,git,curl,libxslt > NUL 2>&1
-  - if "%build%"=="Cygwin (x64)" %cyg_setup% --quiet-mode --no-shortcuts --only-site --root "%cyg_root%" --site "%cyg_mirror%" --local-package-dir "%cyg_cache%" --packages autoconf,automake,bison,cmake,doxygen,graphviz,gcc-core,gcc-g++,mingw-runtime,mingw-binutils,mingw-gcc-core,mingw-gcc-g++,mingw-pthreads,mingw-w32api,libtool,make,python,gettext-devel,gettext,intltool,libiconv,pkg-config,git,curl,libxslt > NUL 2>&1
-  - if "%build%"=="Cygwin (x32)" %command% -lc "cygcheck -dc cygwin"
-  - if "%build%"=="Cygwin (x64)" %command% -lc "cygcheck -dc cygwin"
+  - if "%build%"=="Cygwin (x32)" '%cyg_setup% --quiet-mode --no-shortcuts --only-site --root "%cyg_root%" --site "%cyg_mirror%" --local-package-dir "%cyg_cache%" --packages autoconf,automake,bison,cmake > NUL 2>&1'
+  - if "%build%"=="Cygwin (x64)" '%cyg_setup% --quiet-mode --no-shortcuts --only-site --root "%cyg_root%" --site "%cyg_mirror%" --local-package-dir "%cyg_cache%" --packages autoconf,automake,bison,cmake,doxygen,graphviz,gcc-core,gcc-g++,mingw-runtime,mingw-binutils,mingw-gcc-core,mingw-gcc-g++,mingw-pthreads,mingw-w32api,libtool,make,python,gettext-devel,gettext,intltool,libiconv,pkg-config,git,curl,libxslt > NUL 2>&1'
+  - if "%build%"=="Cygwin (x32)" '%command% -lc "cygcheck -dc cygwin"'
+  - if "%build%"=="Cygwin (x64)" '%command% -lc "cygcheck -dc cygwin"'
   - git config --global user.name "AppVeyor"
   - git config --global user.email "team@appveyor.com"
   - git config --global push.default simple
