--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,23 +17,25 @@ only_commits:
 environment:
   matrix:
 #    - build: VisualStudio (x32)
+#      image: Visual Studio 2015
 #      command: cmd
 #      generate: VisualStudio-x32
 #      name: VisualStudio
 #      ext: bat
 #    - build: VisualStudio (x64)
+#      image: Visual Studio 2015
 #      command: cmd
 #      generate: VisualStudio-x64
 #      name: VisualStudio
 #      ext: bat
     - build: Cygwin (x32)
-      image: unstable
+      image: Visual Studio 2015
       command: C:\cygwin\bin\bash
       generate: Cygwin
       name: Cygwin
       ext: sh
     - build: Cygwin (x64)
-      image: unstable
+      image: Visual Studio 2015
       command: C:\cygwin64\bin\bash
       generate: Cygwin
       name: Cygwin
@@ -42,11 +44,6 @@ environment:
 # Allow to fail on first error in matrix
 matrix:
   fast_finish: true
-
-# Cache files to speed up build
-cache:
-  - 'C:\cygwin\var\cache\setup'
-  - 'C:\cygwin64\var\cache\setup'
 
 # Scripts that are called at very beginning, before repo cloning
 init:
