--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,25 +17,25 @@ only_commits:
 environment:
   matrix:
 #    - build: VisualStudio (x32)
-#      command: cmd
-#      generate: VisualStudio-x32
 #      name: VisualStudio
-#      ext: bat
+#      generator: VisualStudio-x32
+#      extension: bat
+#      command: cmd
 #    - build: VisualStudio (x64)
-#      command: cmd
-#      generate: VisualStudio-x64
 #      name: VisualStudio
-#      ext: bat
+#      generator: VisualStudio-x64
+#      extension: bat
+#      command: cmd
     - build: Cygwin (x32)
+      name: Cygwin
+      generator: Cygwin
+      extension: sh
       command: C:\cygwin\bin\bash -lc
-      generate: Cygwin
-      name: Cygwin
-      ext: sh
     - build: Cygwin (x64)
-      command: C:\cygwin64\bin\bash -lc
-      generate: Cygwin
       name: Cygwin
-      ext: sh
+      generator: Cygwin
+      extension: sh
+      command: C:\cygwin64\bin\bash -lc
 
 # Allow to fail on first error in matrix
 matrix:
@@ -43,16 +43,14 @@ matrix:
 
 # Scripts that are called at very beginning, before repo cloning
 init:
-  - if "%name%"=="VisualStudio" %command% "msbuild /version"
+  - if "%name%"=="VisualStudio" msbuild /version
   - if "%name%"=="Cygwin" %command% "cygcheck -dc cygwin"
-  - cmd: %command% "cmake --version"
+  - cmake --version
 
 # Scripts that run after cloning repository
 install:
-  - if "%build%"=="VisualStudio (x32)" choco install doxygen.portable
-  - if "%build%"=="VisualStudio (x32)" choco install graphviz.portable
-  - if "%build%"=="VisualStudio (x64)" choco install doxygen.portable
-  - if "%build%"=="VisualStudio (x64)" choco install graphviz.portable
+  - if "%name%"=="VisualStudio (x32)" choco install doxygen.portable
+  - if "%name%"=="VisualStudio (x64)" choco install doxygen.portable
   - git config --global user.name "AppVeyor"
   - git config --global user.email "team@appveyor.com"
   - git config --global push.default simple
