--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -44,7 +44,7 @@ matrix:
 # Scripts that are called at very beginning, before repo cloning
 init:
   - if "%name%"=="VisualStudio" msbuild /version
-  - if "%name%"=="Cygwin" '%command% "cygcheck -dc cygwin"'
+  - if "%name%"=="Cygwin" %command% "cygcheck -dc cygwin"
   - '%command% "cmake --version"'
 
 # Scripts that run after cloning repository
