--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -63,12 +63,13 @@ install:
 # Build scripts
 build_script:
   - cd scripts
-  - '%command% "%prefix%01-generate-%generator%.%ext%"'
-  - '%command% "%prefix%02-build-%name%.%ext%"'
-  - '%command% "%prefix%03-tests.%ext%"'
-  - '%command% "%prefix%04-install-%name%.%ext%"'
-  - '%command% "%prefix%05-doxygen-%name%.%ext%"'
-  - '%command% "%prefix%06-clean.%ext%"'
+  - echo "%prefix% 01-generate-%generator%.%ext%"
+  - '%command% "%prefix% 01-generate-%generator%.%ext%"'
+  - '%command% "%prefix% 02-build-%name%.%ext%"'
+  - '%command% "%prefix% 03-tests.%ext%"'
+  - '%command% "%prefix% 04-install-%name%.%ext%"'
+  - '%command% "%prefix% 05-doxygen-%name%.%ext%"'
+  - '%command% "%prefix% 06-clean.%ext%"'
 
 # Test scripts
 test: off
