--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -63,7 +63,7 @@ install:
 # Build scripts
 build_script:
   - cd scripts
-  - echo "%prefix% 01-generate-%generator%.%ext%"
+  - '%command% "%prefix% dir"'
   - '%command% "%prefix% ./01-generate-%generator%.%ext%"'
   - '%command% "%prefix% ./02-build-%name%.%ext%"'
   - '%command% "%prefix% ./03-tests.%ext%"'
