--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -34,14 +34,14 @@ init:
   - if "%build%"=="VisualStudio" msbuild /version
   - if "%build%"=="Cygwin" %command% "cygcheck -dc cygwin"
   - '%command% "cmake --version"'
+  - '%command% "git config --global user.name "AppVeyor"'
+  - '%command% "git config --global user.email "team@appveyor.com"'
+  - '%command% "git config --global push.default simple'
 
 # Scripts that run after cloning repository
 install:
   - if "%build%"=="VisualStudio" choco install doxygen.portable
   - if "%build%"=="VisualStudio" choco install graphviz.portable
-  - git config --global user.name "AppVeyor"
-  - git config --global user.email "team@appveyor.com"
-  - git config --global push.default simple
   - git submodule update --init --recursive --remote
 
 # Build scripts
