--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -18,7 +18,7 @@ environment:
   matrix:
     - build: VisualStudio
       ext: bat
-      command: cmd 
+      command:
       prefix:
     - build: Cygwin
       ext: sh
