--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -18,7 +18,7 @@ environment:
   matrix:
     - build: VisualStudio
       ext: bat
-      command:
+      command: cmd /C
       prefix:
     - build: Cygwin
       ext: sh
