--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ branches:
 git:
   depth: 5
 
-# Scripts that run before install
+# Scripts that run before instal
 before_install:
   - git config --global user.name "Travis CI"
   - git config --global user.email "travis@travis-ci.org"
