--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -42,6 +42,8 @@ init:
 install:
   - if "%build%"=="VisualStudio" choco install doxygen.portable
   - if "%build%"=="VisualStudio" choco install graphviz.portable
+  - cd C:\cygwin64
+  - dir
   - if "%build%"=="Cygwin" 'C:\cygwin64\setup-x86_64.exe --quiet-mode --no-shortcuts --only-site --packages doxygen,graphviz'
   - git submodule update --init --recursive --remote
 
