--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -34,9 +34,9 @@ init:
   - if "%build%"=="VisualStudio" msbuild /version
   - if "%build%"=="Cygwin" %command% "cygcheck -dc cygwin"
   - '%command% "cmake --version"'
-  - '%command% git config --global user.name "AppVeyor"'
-  - '%command% git config --global user.email "team@appveyor.com"'
-  - '%command% git config --global push.default simple'
+  - '%command% "git config --global user.name "AppVeyor""'
+  - '%command% "git config --global user.email "team@appveyor.com""'
+  - '%command% "git config --global push.default simple"'
 
 # Scripts that run after cloning repository
 install:
