--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -20,10 +20,14 @@ environment:
 #      ext: bat
 #      command: cmd /C
 #      prefix:
-    - build: Cygwin
-      ext: sh
-      command: C:\cygwin64\bin\bash -lc
-      prefix: cd $APPVEYOR_BUILD_FOLDER/scripts; exec 0</dev/null;
+#    - build: Cygwin
+#      ext: sh
+#      command: C:\cygwin64\bin\bash -lc
+#      prefix: cd $APPVEYOR_BUILD_FOLDER/scripts; exec 0</dev/null;
+    - build: MinGW
+      ext: bat
+      command: cmd /C
+      prefix:
 
 # Allow to fail on first error in matrix
 matrix:
@@ -43,6 +47,7 @@ install:
   - if "%build%"=="VisualStudio" choco install doxygen.portable
   - if "%build%"=="VisualStudio" choco install graphviz.portable
   - if "%build%"=="Cygwin" C:\cygwin64\setup-x86_64.exe --quiet-mode --no-shortcuts --root "C:\cygwin64" --local-package-dir "C:\cygwin64\var\cache\setup" --packages doxygen,graphviz
+  - if "%build%"=="MinGW" set PATH=C:\mingw-w64\i686-5.3.0-posix-dwarf-rt_v4-rev0\mingw32\bin;%PATH%
   - '%command% "%prefix% git submodule update --init --recursive --remote"'
 
 # Cache Cygwin files to speed up build
