--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,51 +13,28 @@ clone_depth: 5
 only_commits:
   message: build
 
-# Build matrix
-environment:
-  matrix:
-    - build: VisualStudio
-      ext: bat
-      command: cmd /C
-      prefix:
-    - build: Cygwin
-      ext: sh
-      command: C:\cygwin64\bin\bash -lc
-      prefix: cd $APPVEYOR_BUILD_FOLDER/scripts; exec 0</dev/null;
-
-# Allow to fail on first error in matrix
-matrix:
-  fast_finish: true
-
 # Scripts that are called at very beginning, before repo cloning
 init:
-  - if "%build%"=="VisualStudio" msbuild /version
-  - if "%build%"=="Cygwin" %command% "cygcheck -dc cygwin"
-  - '%command% "cmake --version"'
-  - '%command% "git config --global user.name "AppVeyor""'
-  - '%command% "git config --global user.email "team@appveyor.com""'
-  - '%command% "git config --global push.default simple"'
+  - git config --global user.name "AppVeyor"
+  - git config --global user.email "team@appveyor.com"
+  - git config --global push.default simple
+  - choco install doxygen.portable
+  - choco install graphviz.portable
+  - cmake --version
 
 # Scripts that run after cloning repository
 install:
-  - choco install doxygen.portable
-  - choco install graphviz.portable
-  - if "%build%"=="Cygwin" C:\cygwin64\setup-x86_64.exe --quiet-mode --no-shortcuts --root "C:\cygwin64" --local-package-dir "C:\cygwin64\var\cache\setup" --packages doxygen,graphviz
-  - '%command% "%prefix% git submodule update --init --recursive --remote"'
-
-# Cache Cygwin files to speed up build
-cache:
-    - 'C:\cygwin64\var\cache\setup'
+  - git submodule update --init --recursive --remote
 
 # Build scripts
 build_script:
   - cd scripts
-  - '%command% "%prefix% ./01-generate-%build%.%ext%"'
-  - '%command% "%prefix% ./02-build-%build%.%ext%"'
-  - '%command% "%prefix% ./03-tests.%ext%"'
-  - '%command% "%prefix% ./04-install-%build%.%ext%"'
-  - '%command% "%prefix% ./05-doxygen-%build%.%ext%"'
-  - '%command% "%prefix% ./06-clean.%ext%"'
+  - ./01-generate-Unix.sh
+  - ./02-build-Unix.sh
+  - ./03-tests.sh
+  - ./04-install-Unix.sh
+  - ./05-doxygen-Unix.sh
+  - ./06-clean.sh
 
 # Test scripts
 test: off
