--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,9 @@
 cmake_minimum_required(VERSION 2.8)
+
+# Global properties
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+
+# Project name
 project(cppbenchmark)
 
 # Doxygen
@@ -8,6 +13,7 @@ if(DOXYGEN_FOUND)
   if(NOT TARGET ${DOXYGEN})
     add_custom_command(OUTPUT "Doxyfile" COMMAND ${DOXYGEN_EXECUTABLE} "Doxyfile" WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}/documents")
     add_custom_target(${DOXYGEN} DEPENDS "Doxyfile")
+    set_target_properties(${DOXYGEN} PROPERTIES FOLDER doxygen)
   endif()
 endif()
 
@@ -38,6 +44,7 @@ include_directories("modules/cpp-optparse")
 file(GLOB_RECURSE SOURCE_FILES "source/*.cpp")
 add_library(cppbenchmark ${SOURCE_FILES})
 target_link_libraries(cppbenchmark cpp-optparse)
+set_target_properties(cppbenchmark PROPERTIES FOLDER libraries)
 list(APPEND INSTALL_TARGETS cppbenchmark)
 
 # Full module components: examples, tests and install
@@ -50,6 +57,7 @@ if(NOT CPPBENCHMARK_MODULE)
     set(EXAMPLE_TARGET "cppbenchmark-example-${EXAMPLE_NAME}")
     add_executable(${EXAMPLE_TARGET} examples/${EXAMPLE_FILE})
     target_link_libraries(${EXAMPLE_TARGET} cppbenchmark ${SYSTEM})
+    set_target_properties(${EXAMPLE_TARGET} PROPERTIES FOLDER examples)
     list(APPEND INSTALL_TARGETS ${EXAMPLE_TARGET})
     list(APPEND INSTALL_TARGETS_PDB ${EXAMPLE_TARGET})
   endforeach()
@@ -58,6 +66,7 @@ if(NOT CPPBENCHMARK_MODULE)
   file(GLOB TESTS_SOURCE_FILES "tests/*.cpp")
   add_executable(cppbenchmark-tests ${CATCH_HEADER} ${TESTS_SOURCE_FILES})
   target_link_libraries(cppbenchmark-tests cppbenchmark ${SYSTEM})
+  set_target_properties(cppbenchmark-tests PROPERTIES FOLDER tests)
   list(APPEND INSTALL_TARGETS cppbenchmark-tests)
   list(APPEND INSTALL_TARGETS_PDB cppbenchmark-tests)
 
