--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ if(DOXYGEN_FOUND)
 endif()
 
 # CMake module path
-set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
+set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 # Compiler features
 include(SetCompilerFeatures)
@@ -77,14 +77,14 @@ if(NOT CPPBENCHMARK_MODULE)
 
   # Install
   install(TARGETS ${INSTALL_TARGETS}
-    RUNTIME DESTINATION "${CMAKE_CURRENT_SOURCE_DIR}/bin"
-    LIBRARY DESTINATION "${CMAKE_CURRENT_SOURCE_DIR}/bin"
-    ARCHIVE DESTINATION "${CMAKE_CURRENT_SOURCE_DIR}/bin")
+    RUNTIME DESTINATION "${PROJECT_SOURCE_DIR}/bin"
+    LIBRARY DESTINATION "${PROJECT_SOURCE_DIR}/bin"
+    ARCHIVE DESTINATION "${PROJECT_SOURCE_DIR}/bin")
 
   # Install *.pdb files
   if(MSVC)
     foreach(INSTALL_TARGET_PDB ${INSTALL_TARGETS_PDB})
-      install(FILES $<TARGET_PDB_FILE:${INSTALL_TARGET_PDB}> DESTINATION "${CMAKE_CURRENT_SOURCE_DIR}/bin")
+      install(FILES $<TARGET_PDB_FILE:${INSTALL_TARGET_PDB}> DESTINATION "${PROJECT_SOURCE_DIR}/bin")
     endforeach()
   endif()
 
