--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,9 +34,6 @@ list(APPEND SYSTEM Threads::Threads)
 # Modules
 add_subdirectory("modules")
 
-# Includes
-include_directories("include")
-
 # Temporary disable some warnings
 # C4200: nonstandard extension used : zero-sized array in struct/union
 if(CMAKE_MAKE_PROGRAM MATCHES "(MSBuild|devenv|msdev|nmake)")
@@ -49,6 +46,7 @@ endif()
 file(GLOB_RECURSE SOURCE_FILES "source/*.cpp")
 set_source_files_properties(${SOURCE_FILES} PROPERTIES COMPILE_FLAGS "${COMMON_COMPILE_FLAGS}")
 add_library(cppbenchmark ${SOURCE_FILES})
+target_include_directories(cppbenchmark PUBLIC "include")
 target_link_libraries(cppbenchmark cpp-optparse HdrHistogram)
 set_target_properties(cppbenchmark PROPERTIES FOLDER libraries)
 list(APPEND INSTALL_TARGETS cppbenchmark)
@@ -63,6 +61,7 @@ if(NOT CPPBENCHMARK_MODULE)
     set(EXAMPLE_TARGET "cppbenchmark-example-${EXAMPLE_NAME}")
     set_source_files_properties(examples/${EXAMPLE_FILE} PROPERTIES COMPILE_FLAGS "${COMMON_COMPILE_FLAGS}")
     add_executable(${EXAMPLE_TARGET} examples/${EXAMPLE_FILE})
+    target_include_directories(${EXAMPLE_TARGET} PUBLIC "include")
     target_link_libraries(${EXAMPLE_TARGET} cppbenchmark ${SYSTEM})
     set_target_properties(${EXAMPLE_TARGET} PROPERTIES FOLDER examples)
     list(APPEND INSTALL_TARGETS ${EXAMPLE_TARGET})
@@ -73,7 +72,7 @@ if(NOT CPPBENCHMARK_MODULE)
   file(GLOB TESTS_SOURCE_FILES "tests/*.cpp")
   set_source_files_properties(${TESTS_SOURCE_FILES} PROPERTIES COMPILE_FLAGS "${COMMON_COMPILE_FLAGS}")
   add_executable(cppbenchmark-tests ${CATCH} ${TESTS_SOURCE_FILES})
-  target_include_directories(cppbenchmark-tests PRIVATE "modules/catch/single_include")
+  target_include_directories(cppbenchmark-tests PUBLIC "include" PRIVATE "modules/catch/single_include")
   target_link_libraries(cppbenchmark-tests cppbenchmark ${SYSTEM})
   set_target_properties(cppbenchmark-tests PROPERTIES FOLDER tests)
   list(APPEND INSTALL_TARGETS cppbenchmark-tests)
