--- a/.travis.yml
+++ b/.travis.yml
@@ -7,17 +7,28 @@ matrix:
     - env: Linux, gcc
       os: linux
       compiler: gcc
-      apt:
-        sources:
-          - ubuntu-toolchain-r-test
-        packages:
-          - gcc-5
-          - g++-5
-          - cmake
-          - doxygen
-          - graphviz
-          - libbfd-dev
-          - uuid-dev
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - gcc-5
+            - g++-5
+            - cmake
+            - doxygen
+            - graphviz
+    - env: Linux, clang
+      os: linux
+      compiler: clang
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - clang
+            - cmake
+            - doxygen
+            - graphviz
     - env: OSX, clang
       os: osx
       osx_image: xcode8
